Mon Mar 29 13:11:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
          Added booleans to determine which ports were connected.
          This to prevent starting unnecessary DataReaders/DataWriters.

        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.h:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
          Added booleans to determine which ports were connected.
          This to prevent starting unnecessary DataReaders/DataWriters.
          Added tracing.

Mon Mar 29 12:43:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/Latency/Sender/Latency_Test_Sender_exec.h:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.cpp:
        * connectors/dds4ccm/performance-tests/LatencyTT/Sender/LatencyTT_Test_Sender_exec.h:
          Reduced number of atomic variables

Mon Mar 29 12:18:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
          Use more ACE_UINT64 to avoid truncations

Mon Mar 29 12:03:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/AMI4CCM_IDLTest.mpc:
          Added several projects

        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc:
          Added another export macro

Mon Mar 29 10:33:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello.idl:
          Fixed this MPC file

Mon Mar 29 10:15:13 UTC 2010  Martin Corino <mcorino@remedy.nl>

        * tools/Completion/Completion_Counter_Base.h: