@@ -14,11 +14,7 @@
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::DDS_Event_Connector_T (void) :
-    DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>(),
-    supplier_obtained_ (false),
-    push_consumer_obtained_ (false),
-    pull_consumer_obtained_ (false)
-
+    DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>()
 {
 }
 
@@ -33,7 +29,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_supplier_data (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_supplier_data");
 
-  this->supplier_obtained_ = true;
   return this->supplier_.get_data ();
 }
 
@@ -43,7 +38,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_supplier_dds_entity (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_supplier_dds_entity");
 
-  this->supplier_obtained_ = true;
   return this->supplier_.get_dds_entity ();
 }
 
@@ -53,7 +47,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_fresh_data (
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_fresh_data");
 
-  this->pull_consumer_obtained_ = true;
   return this->pull_consumer_.get_fresh_data ();
 }
 
@@ -63,7 +56,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_data (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_data");
 
-  this->push_consumer_obtained_ = true;
   return this->push_consumer_.get_data ();
 }
 
@@ -73,7 +65,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_data (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_data");
 
-  this->pull_consumer_obtained_ = true;
   return this->pull_consumer_.get_data ();
 }
 
@@ -83,7 +74,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_data_control
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_data_control");
 
-  this->push_consumer_obtained_ = true;
   return this->push_consumer_.get_data_control ();
 }
 
@@ -93,7 +83,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_dds_entity (
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_consumer_dds_entity");
 
-  this->pull_consumer_obtained_ = true;
   return this->pull_consumer_.get_dds_entity ();
 }
 
@@ -103,7 +92,6 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_dds_entity (
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_consumer_dds_entity");
 
-  this->push_consumer_obtained_ = true;
   return this->push_consumer_.get_dds_entity ();
 }
 
@@ -115,32 +103,23 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::configuration_complete (void)
 
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::configuration_complete ();
 
-  if (this->push_consumer_obtained_)
-    {
-      this->push_consumer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->push_consumer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->supplier_obtained_)
-    {
-      this->supplier_.configuration_complete(
-        this->topic_.in (),
-        this->publisher_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->supplier_.configuration_complete(
+    this->topic_.in (),
+    this->publisher_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->pull_consumer_obtained_)
-    {
-      this->pull_consumer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->pull_consumer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
@@ -154,25 +133,16 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_activate (void)
 #endif
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_activate (reactor);
 
-  if (this->push_consumer_obtained_)
-    {
-      this->push_consumer_.activate (
-        this->context_->get_connection_push_consumer_data_listener (),
-        this->context_->get_connection_push_consumer_status (),
-        reactor);
-    }
+  this->push_consumer_.activate (
+    this->context_->get_connection_push_consumer_data_listener (),
+    this->context_->get_connection_push_consumer_status (),
+    reactor);
 
-  if (this->supplier_obtained_)
-    {
-      this->supplier_.activate ();
-    }
+  this->supplier_.activate ();
 
-  if (this->pull_consumer_obtained_)
-    {
-      this->pull_consumer_.activate (
-        this->context_->get_connection_pull_consumer_status (),
-        reactor);
-    }
+  this->pull_consumer_.activate (
+    this->context_->get_connection_pull_consumer_status (),
+    reactor);
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
@@ -181,18 +151,9 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_passivate (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_passivate");
 
-  if (this->push_consumer_obtained_)
-    {
-      this->push_consumer_.passivate ();
-    }
-  if (this->supplier_obtained_)
-    {
-      this->supplier_.passivate ();
-    }
-  if (this->pull_consumer_obtained_)
-    {
-      this->pull_consumer_.passivate ();
-    }
+  this->push_consumer_.passivate ();
+  this->supplier_.passivate ();
+  this->pull_consumer_.passivate ();
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_passivate ();
 }
 
@@ -202,18 +163,8 @@ DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_remove (void)
 {
   DDS4CCM_TRACE ("DDS_Event_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_remove");
 
-  if (this->push_consumer_obtained_)
-    {
-      this->push_consumer_.remove (this->subscriber_.in ());
-    }
-  if (this->supplier_obtained_)
-    {
-      this->supplier_.remove (this->publisher_.in ());
-    }
-  if (this->pull_consumer_obtained_)
-    {
-      this->pull_consumer_.remove (this->subscriber_.in ());
-    }
-
+  this->push_consumer_.remove (this->subscriber_.in ());
+  this->supplier_.remove (this->publisher_.in ());
+  this->pull_consumer_.remove (this->subscriber_.in ());
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_remove ();
 }
