@@ -16,12 +16,7 @@
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::DDS_State_Connector_T (void) :
-    DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE> (),
-    observable_obtained_ (false),
-    passive_observer_obtained_ (false),
-    pull_observer_obtained_ (false),
-    push_observer_obtained_ (false),
-    push_state_observer_obtained_ (false)
+    DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE> ()
 {
 }
 
@@ -34,9 +29,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::updater_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_observable_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_observable_data");
-
-  this->observable_obtained_ = true;
   return this->observable_.get_data ();
 }
 
@@ -44,9 +36,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::DDS::CCM_DataWriter_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_observable_dds_entity (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_observable_dds_entity");
-
-  this->observable_obtained_ = true;
   return this->observable_.get_dds_entity ();
 }
 
@@ -54,9 +43,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::reader_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_passive_observer_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_passive_observer_data");
-
-  this->passive_observer_obtained_ = true;
   return this->passive_observer_.get_data ();
 }
 
@@ -64,9 +50,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::DDS::CCM_DataReader_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_passive_observer_dds_entity (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_passive_observer_dds_entity");
-
-  this->passive_observer_obtained_ = true;
   return this->passive_observer_.get_dds_entity ();
 }
 
@@ -74,9 +57,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::reader_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_data");
-
-  this->pull_observer_obtained_ = true;
   return this->pull_observer_.get_data ();
 }
 
@@ -84,9 +64,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::getter_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_fresh_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_fresh_data");
-
-  this->pull_observer_obtained_ = true;
   return this->pull_observer_.get_fresh_data ();
 }
 
@@ -94,9 +71,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::DDS::CCM_DataReader_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_dds_entity (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_pull_observer_dds_entity");
-
-  this->pull_observer_obtained_ = true;
   return this->pull_observer_.get_dds_entity ();
 }
 
@@ -104,9 +78,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::reader_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_data");
-
-  this->push_observer_obtained_ = true;
   return this->push_observer_.get_data ();
 }
 
@@ -114,9 +85,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::CCM_DDS::CCM_DataListenerControl_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_data_control (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_data_control");
-
-  this->push_observer_obtained_ = true;
   return this->push_observer_.get_data_control ();
 }
 
@@ -124,9 +92,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::DDS::CCM_DataReader_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_dds_entity (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_observer_dds_entity");
-
-  this->push_observer_obtained_ = true;
   return this->push_observer_.get_dds_entity ();
 }
 
@@ -134,9 +99,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 typename CCM_TYPE::reader_type::_ptr_type
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_data (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_data");
-
-  this->push_state_observer_obtained_ = true;
   return this->push_state_observer_.get_data ();
 }
 
@@ -144,9 +106,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::CCM_DDS::CCM_StateListenerControl_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_data_control (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_data_control");
-
-  this->push_state_observer_obtained_ = true;
   return this->push_state_observer_.get_data_control ();
 }
 
@@ -154,9 +113,6 @@ template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
 ::DDS::CCM_DataReader_ptr
 DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_dds_entity (void)
 {
-  DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::get_push_state_observer_dds_entity");
-
-  this->push_state_observer_obtained_ = true;
   return this->push_state_observer_.get_dds_entity ();
 }
 
@@ -167,52 +123,35 @@ DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::configuration_complete (void)
   DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::configuration_complete");
 
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::configuration_complete ();
+  this->observable_.configuration_complete (
+    this->topic_.in (),
+    this->publisher_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->observable_obtained_)
-    {
-      this->observable_.configuration_complete (
-        this->topic_.in (),
-        this->publisher_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->push_observer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->push_observer_obtained_)
-    {
-      this->push_observer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->push_state_observer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->push_state_observer_obtained_)
-    {
-      this->push_state_observer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->pull_observer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 
-  if (this->pull_observer_obtained_)
-    {
-      this->pull_observer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
-
-
-  if (this->passive_observer_obtained_)
-    {
-      this->passive_observer_.configuration_complete (
-        this->topic_.in (),
-        this->subscriber_.in (),
-        this->library_name_,
-        this->profile_name_);
-    }
+  this->passive_observer_.configuration_complete (
+    this->topic_.in (),
+    this->subscriber_.in (),
+    this->library_name_,
+    this->profile_name_);
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
@@ -227,41 +166,25 @@ DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_activate (void)
 #endif
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_activate (reactor);
 
-  if (this->observable_obtained_)
-    {
-      this->observable_.activate ();
-    }
+  this->observable_.activate ();
 
-  if (this->push_observer_obtained_)
-    {
-      this->push_observer_.activate (
-        this->context_->get_connection_push_observer_data_listener (),
-        this->context_->get_connection_push_observer_status (),
-        reactor);
-    }
+  this->push_observer_.activate (
+    this->context_->get_connection_push_observer_data_listener (),
+    this->context_->get_connection_push_observer_status (),
+    reactor);
 
-  if (this->push_state_observer_obtained_)
-    {
-      this->push_state_observer_.activate (
-        this->context_->get_connection_push_state_observer_data_listener (),
-        this->context_->get_connection_push_state_observer_status (),
-        reactor);
-    }
+  this->push_state_observer_.activate (
+    this->context_->get_connection_push_state_observer_data_listener (),
+    this->context_->get_connection_push_state_observer_status (),
+    reactor);
 
-  if (this->pull_observer_obtained_)
-    {
-      this->pull_observer_.activate (
-        this->context_->get_connection_pull_observer_status (),
-        reactor);
-    }
+  this->pull_observer_.activate (
+    this->context_->get_connection_pull_observer_status (),
+    reactor);
 
-
-  if (this->passive_observer_obtained_)
-    {
-      this->passive_observer_.activate (
-        this->context_->get_connection_passive_observer_status (),
-        reactor);
-    }
+  this->passive_observer_.activate (
+    this->context_->get_connection_passive_observer_status (),
+    reactor);
 }
 
 template <typename DDS_TYPE, typename CCM_TYPE, bool FIXED>
@@ -270,32 +193,11 @@ DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_passivate (void)
 {
   DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_passivate");
 
-  if (this->observable_obtained_)
-    {
-      this->observable_.passivate ();
-    }
-
-  if (this->push_observer_obtained_)
-    {
-      this->push_observer_.passivate ();
-    }
-
-  if (this->push_state_observer_obtained_)
-    {
-      this->push_state_observer_.passivate ();
-    }
-
-  if (this->pull_observer_obtained_)
-    {
-      this->pull_observer_.passivate ();
-    }
-
-
-  if (this->passive_observer_obtained_)
-    {
-      this->passive_observer_.passivate ();
-    }
-
+  this->observable_.passivate ();
+  this->push_observer_.passivate ();
+  this->push_state_observer_.passivate ();
+  this->pull_observer_.passivate ();
+  this->passive_observer_.passivate ();
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_passivate ();
 }
 
@@ -305,32 +207,11 @@ DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_remove (void)
 {
   DDS4CCM_TRACE ("DDS_State_Connector_T<DDS_TYPE, CCM_TYPE, FIXED>::ccm_remove");
 
-  if (this->observable_obtained_)
-    {
-      this->observable_.remove (this->publisher_.in ());
-    }
-
-  if (this->push_observer_obtained_)
-    {
-      this->push_observer_.remove (this->subscriber_.in ());
-    }
-
-  if (this->push_state_observer_obtained_)
-    {
-      this->push_state_observer_.remove (this->subscriber_.in ());
-    }
-
-  if (this->pull_observer_obtained_)
-    {
-      this->pull_observer_.remove (this->subscriber_.in ());
-    }
-
-
-  if (this->passive_observer_obtained_)
-    {
-      this->passive_observer_.remove (this->subscriber_.in ());
-    }
-
+  this->observable_.remove (this->publisher_.in ());
+  this->push_observer_.remove (this->subscriber_.in ());
+  this->push_state_observer_.remove (this->subscriber_.in ());
+  this->pull_observer_.remove (this->subscriber_.in ());
+  this->passive_observer_.remove (this->subscriber_.in ());
   DDS_TopicBase_Connector_T<DDS_TYPE, CCM_TYPE>::ccm_remove ();
 }
 
